- Updated pyplane logos - created icon files for MS windows

--- a/gui/Ui_PyPlane.ui
+++ b/gui/Ui_PyPlane.ui
@@ -26,6 +26,10 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="../resources/icons.qrc">
+    <normaloff>:/icons/pyplane_logo.png</normaloff>:/icons/pyplane_logo.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
@@ -1695,7 +1699,9 @@
   <tabstop>Y_ZoomButton</tabstop>
   <tabstop>logField</tabstop>
  </tabstops>
- <resources/>
+ <resources>
+  <include location="../resources/icons.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>actionQuit</sender>
