--- a/gui/Ui_ZoomWidgetSimple.ui
+++ b/gui/Ui_ZoomWidgetSimple.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>620</width>
-    <height>477</height>
+    <width>662</width>
+    <height>593</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,14 +30,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="param_minLabel">
+      <widget class="QLabel" name="tminLabel">
        <property name="font">
         <font>
          <pointsize>7</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>xmin</string>
+        <string>tmin</string>
        </property>
       </widget>
      </item>
@@ -58,14 +58,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="param_maxLabel">
+      <widget class="QLabel" name="tmaxLabel">
        <property name="font">
         <font>
          <pointsize>7</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>xmax</string>
+        <string>tmax</string>
        </property>
       </widget>
      </item>
@@ -86,14 +86,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="label_3">
+      <widget class="QLabel" name="param_minLabel">
        <property name="font">
         <font>
          <pointsize>7</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>tmin</string>
+        <string>xmin</string>
        </property>
       </widget>
      </item>
@@ -114,14 +114,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="param_maxLabel">
        <property name="font">
         <font>
          <pointsize>7</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>tmax</string>
+        <string>xmax</string>
        </property>
       </widget>
      </item>
