--- a/gui/Ui_ZoomWidget.ui
+++ b/gui/Ui_ZoomWidget.ui
@@ -305,9 +305,15 @@
      </item>
      <item>
       <widget class="QComboBox" name="linBox">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="maximumSize">
         <size>
-         <width>110</width>
+         <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
@@ -317,7 +323,7 @@
       <widget class="QPushButton" name="linButton">
        <property name="maximumSize">
         <size>
-         <width>110</width>
+         <width>16777215</width>
          <height>16777215</height>
         </size>
        </property>
