--- a/gui/Ui_PyPlane_about.ui
+++ b/gui/Ui_PyPlane_about.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>470</width>
-    <height>429</height>
+    <width>579</width>
+    <height>422</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>397</y>
+     <x>230</x>
+     <y>390</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -34,7 +34,7 @@
     <rect>
      <x>10</x>
      <y>3</y>
-     <width>451</width>
+     <width>561</width>
      <height>391</height>
     </rect>
    </property>
@@ -46,7 +46,7 @@
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>431</width>
+      <width>541</width>
       <height>361</height>
      </rect>
     </property>
@@ -67,13 +67,13 @@
             <widget class="QLabel" name="label_pyplane_version">
              <property name="font">
               <font>
-               <pointsize>11</pointsize>
+               <pointsize>10</pointsize>
                <weight>75</weight>
                <bold>true</bold>
               </font>
              </property>
              <property name="text">
-              <string>PyPlane Version:</string>
+              <string>Version:</string>
              </property>
             </widget>
            </item>
@@ -81,7 +81,7 @@
             <widget class="QLabel" name="pyplane_version_info">
              <property name="font">
               <font>
-               <pointsize>11</pointsize>
+               <pointsize>10</pointsize>
                <weight>75</weight>
                <bold>true</bold>
               </font>
@@ -95,7 +95,7 @@
             <widget class="QLabel" name="label_pyplane_date">
              <property name="font">
               <font>
-               <pointsize>11</pointsize>
+               <pointsize>10</pointsize>
                <weight>75</weight>
                <bold>true</bold>
               </font>
@@ -105,11 +105,11 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="0">
+           <item row="1" column="1">
             <widget class="QLabel" name="pyplane_date">
              <property name="font">
               <font>
-               <pointsize>11</pointsize>
+               <pointsize>10</pointsize>
                <weight>75</weight>
                <bold>true</bold>
               </font>
@@ -119,11 +119,11 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
+           <item row="2" column="0">
             <widget class="QLabel" name="label_platform">
              <property name="font">
               <font>
-               <pointsize>11</pointsize>
+               <pointsize>10</pointsize>
                <weight>75</weight>
                <bold>true</bold>
               </font>
@@ -137,7 +137,7 @@
             <widget class="QLabel" name="pyplane_platform">
              <property name="font">
               <font>
-               <pointsize>11</pointsize>
+               <pointsize>10</pointsize>
                <weight>75</weight>
                <bold>true</bold>
               </font>
@@ -152,15 +152,19 @@
          <item>
           <widget class="QLabel" name="txtCopyright">
            <property name="text">
-            <string>Copyright (C) 2013-2016
-by Klemens Fritzsche, Carsten Knoll, 
-Jan Winkler
-Technische Universität Dresden
-Institut für Regelungs- und Steuerungstheorie
-http://www.et.tu-dresden.de/rst/</string>
+            <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Copyright (C) 2013-2017&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;by Klemens Fritzsche and Jan Winkler&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Technische Universität Dresden&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Faculty of Electrical and Computer Engineering&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Institute of Control Theory&lt;/p&gt;
+&lt;p style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;http://www.tu-dresden.de/ing/elektrotechnik/rst?set_language=en&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;http://www.tu-dresden.de/ing/elektrotechnik/rst?set_language=en&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
            </property>
            <property name="alignment">
-            <set>Qt::AlignCenter</set>
+            <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
            </property>
            <property name="wordWrap">
             <bool>true</bool>
@@ -196,7 +200,7 @@ http://www.et.tu-dresden.de/rst/</string>
      <item>
       <widget class="QLabel" name="txtGPL">
        <property name="text">
-        <string>This code is free software, licensed under the terms of the GNU General Public License, Version 3
+        <string>This program is free software, licensed under the terms of the GNU General Public License, Version 3
 http://www.gnu.org/license/</string>
        </property>
        <property name="alignment">
