--- a/gui/Ui_PyPlane.ui
+++ b/gui/Ui_PyPlane.ui
@@ -7,8 +7,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>770</width>
-    <height>757</height>
+    <width>800</width>
+    <height>800</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -271,7 +271,7 @@
         <widget class="QWidget" name="tab">
          <property name="maximumSize">
           <size>
-           <width>720</width>
+           <width>750</width>
            <height>16777215</height>
           </size>
          </property>
@@ -281,6 +281,9 @@
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
            <layout class="QVBoxLayout" name="SettingsLayout">
+            <property name="spacing">
+             <number>6</number>
+            </property>
             <item>
              <widget class="QWidget" name="SettingsWidgetPlaceholder" native="true"/>
             </item>
@@ -312,7 +315,7 @@
         </property>
         <property name="font">
          <font>
-          <pointsize>7</pointsize>
+          <pointsize>8</pointsize>
          </font>
         </property>
         <property name="mouseTracking">
@@ -350,7 +353,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>770</width>
+     <width>800</width>
      <height>21</height>
     </rect>
    </property>
