--- a/gui/Ui_PyPlane_about.ui
+++ b/gui/Ui_PyPlane_about.ui
@@ -200,8 +200,7 @@ p, li { white-space: pre-wrap; }
      <item>
       <widget class="QLabel" name="txtGPL">
        <property name="text">
-        <string>This program is free software, licensed under the terms of the GNU General Public License, Version 3
-http://www.gnu.org/license/</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This program is free software, licensed under the terms of the GNU General Public License, Version 3&lt;/p&gt;&lt;p&gt;&lt;a href=&quot;http://www.gnu.org/license/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;http://www.gnu.org/license/&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -217,9 +216,11 @@ http://www.gnu.org/license/</string>
      <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>Please consult
-&lt;https://github.com/TUD-RST/pyplane.git&gt;
- for updated versions of this program!</string>
+        <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Please consult &lt;a href=&quot;https://github.com/TUD-RST/pyplane.git&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;https://github.com/TUD-RST/pyplane.git&lt;/span&gt;&lt;/a&gt; for updated versions of this program!&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
