--- a/gui/Ui_PyPlane_about.ui
+++ b/gui/Ui_PyPlane_about.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>601</width>
-    <height>478</height>
+    <width>640</width>
+    <height>510</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>250</x>
-     <y>440</y>
+     <y>470</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -34,8 +34,8 @@
     <rect>
      <x>10</x>
      <y>3</y>
-     <width>581</width>
-     <height>431</height>
+     <width>621</width>
+     <height>461</height>
     </rect>
    </property>
    <property name="title">
@@ -46,8 +46,8 @@
      <rect>
       <x>10</x>
       <y>20</y>
-      <width>561</width>
-      <height>401</height>
+      <width>601</width>
+      <height>431</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -157,24 +157,17 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="0">
+           <item row="8" column="0">
             <widget class="QLabel" name="label_qt_version">
              <property name="text">
               <string>QT-Version:</string>
              </property>
             </widget>
            </item>
-           <item row="5" column="0">
+           <item row="9" column="0">
             <widget class="QLabel" name="label_pyqt_version">
              <property name="text">
               <string>PyQT-Version:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="0">
-            <widget class="QLabel" name="label_matplotlib_version">
-             <property name="text">
-              <string>Matplotlib-Version:</string>
              </property>
             </widget>
            </item>
@@ -185,50 +178,71 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="1">
+           <item row="8" column="1">
             <widget class="QLabel" name="qt_version_info">
              <property name="text">
               <string>TextLabel</string>
              </property>
             </widget>
            </item>
-           <item row="5" column="1">
+           <item row="9" column="1">
             <widget class="QLabel" name="pyqt_version_info">
              <property name="text">
               <string>TextLabel</string>
              </property>
             </widget>
            </item>
-           <item row="6" column="1">
+           <item row="7" column="0">
+            <widget class="QLabel" name="label_matplotlib_version">
+             <property name="text">
+              <string>Matplotlib-Version:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="7" column="1">
             <widget class="QLabel" name="matplotlib_version_info">
              <property name="text">
               <string>TextLabel</string>
              </property>
             </widget>
            </item>
-           <item row="7" column="0">
+           <item row="4" column="0">
             <widget class="QLabel" name="label_numpy_version">
              <property name="text">
               <string>NumPy-Version:</string>
              </property>
             </widget>
            </item>
-           <item row="8" column="0">
-            <widget class="QLabel" name="label_sympy_version">
-             <property name="text">
-              <string>SymPy-Version:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="7" column="1">
+           <item row="4" column="1">
             <widget class="QLabel" name="numpy_version_info">
              <property name="text">
               <string>TextLabel</string>
              </property>
             </widget>
            </item>
-           <item row="8" column="1">
+           <item row="6" column="0">
+            <widget class="QLabel" name="label_sympy_version">
+             <property name="text">
+              <string>SymPy-Version:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="1">
             <widget class="QLabel" name="sympy_version_info">
+             <property name="text">
+              <string>TextLabel</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="QLabel" name="label_scipy_version">
+             <property name="text">
+              <string>SciPy-Version:</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="1">
+            <widget class="QLabel" name="scipy_version_info">
              <property name="text">
               <string>TextLabel</string>
              </property>
@@ -242,8 +256,8 @@
         <widget class="QLabel" name="label">
          <property name="maximumSize">
           <size>
-           <width>200</width>
-           <height>200</height>
+           <width>250</width>
+           <height>250</height>
           </size>
          </property>
          <property name="text">
