--- a/gui/Ui_PyPlane.ui
+++ b/gui/Ui_PyPlane.ui
@@ -404,7 +404,7 @@
  <connections>
   <connection>
    <sender>actionQuit</sender>
-   <signal>activated()</signal>
+   <signal>triggered()</signal>
    <receiver>pyplane</receiver>
    <slot>close()</slot>
    <hints>
